# PlainView

./: .env.example  .gitignore  BUILD_SUMMARY.txt  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INTEGRATION_GUIDE.md  LAUNCH_READINESS_AUDIT.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  README_BUILD.md  ROADMAP_IMPLEMENTATION.md  ROS2_TELEMETRY_INTEGRATION.md  STYLING.md  TECH_DEBT_FIXED.md  UI_IMPROVEMENTS.md  WARP.md  docker-compose.yml  package-lock.json  package.json  test_plainview.db  tsconfig.base.json
services/api/: Dockerfile  MIGRATION.md  package.json  pyproject.toml  pytest.ini  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py
services/api/app/: __init__.py  auth.py  auth_jwt.py  config.py  database.py  error_handlers.py  events.py  logging_config.py  main.py  metrics.py  models.py  rate_limit.py  store.py
services/api/app/agents/: __init__.py  base.py  registry.py  routes.py  simulated.py
services/api/app/integrations/: summit.py
services/api/app/middleware/: metrics.py
services/api/app/modules/: __init__.py  auth_routes.py  flowiq.py  incidents.py  intelligence.py  pipelineguard.py  rigsight.py  stubs.py  valveops.py
services/api/data/: incidents.json  users.json  valves.json
services/api/src/: ros2-bridge.ts  sentinel-client.ts  server.ts  sse.ts  store.ts
services/api/src/db/: client.ts
services/api/test/: health.test.ts  valveops.test.ts
services/api/tests/: conftest.py  test_events.py  test_flow.py  test_health.py  test_incidents.py  test_pipeline.py  test_valveops.py
(+55 files in other folders)
