[project]
name = "plainview-api"
version = "0.0.1"
description = "Plainview API Service - FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
